--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "nestjs-sequelize-seeder": "^1.1.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
