--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
+NODE_ENV=
 DB_HOST=
 DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASS=
-DB_DIALECT=
 
 JWT_SECRET=
 JWT_EXPIRES=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
