--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/sequelize": "^0.2.0",
     "@nestjs/serve-static": "^2.1.4",
+    "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
     "date-fns": "^2.22.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nestjs-sequelize-seeder": "^1.1.4",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
@@ -47,10 +50,13 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/multer": "^1.4.6",
     "@types/node": "^14.14.6",
+    "@types/passport-google-oauth20": "^2.0.9",
+    "@types/passport-jwt": "^3.0.6",
     "@types/sequelize": "^4.28.9",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
