--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/sequelize": "^0.2.0",
     "@nestjs/serve-static": "^2.1.4",
+    "aws-sdk": "^2.943.0",
     "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
     "date-fns": "^2.22.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
+    "nestjs-s3": "^1.0.1",
     "nestjs-sequelize-seeder": "^1.1.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
@@ -50,10 +53,12 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/multer": "^1.4.6",
+    "@types/multer-s3": "^2.7.10",
     "@types/node": "^14.14.6",
     "@types/passport-google-oauth20": "^2.0.9",
     "@types/passport-jwt": "^3.0.6",
