--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^8.0.4",
     "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.5.1",
+    "@nestjs/core": "^8.0.4",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-express": "^8.0.4",
     "@nestjs/sequelize": "^0.2.0",
     "@nestjs/serve-static": "^2.1.4",
+    "@nestjs/swagger": "^5.0.4",
     "aws-sdk": "^2.943.0",
     "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
@@ -47,7 +48,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sequelize": "6.1",
-    "sequelize-typescript": "2"
+    "sequelize-typescript": "2",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
