--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "6.1",
     "sequelize-typescript": "2",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
