--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@sendgrid/mail": "^7.4.6",
     "aws-sdk": "^2.943.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "crypto": "^1.0.1",
     "date-fns": "^2.22.1",
     "multer": "^1.4.2",
