--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/sequelize": "^0.2.0",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^5.0.4",
+    "@ntegral/nestjs-s3": "^1.0.3",
     "@ntegral/nestjs-sendgrid": "^1.0.0",
     "@sendgrid/mail": "^7.4.6",
     "aws-sdk": "^2.943.0",
