--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.13.1",
     "crypto": "^1.0.1",
     "date-fns": "^2.22.1",
+    "date-fns-tz": "^1.1.6",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
